syntax = "proto3";

package flagd.evaluation;

option java_package = "dev.openfeature.flagd.evaluator.proto";
option java_outer_classname = "EvaluationProto";

// Resolution reason matching the flagd provider specification
enum Reason {
  REASON_UNSPECIFIED = 0;
  REASON_STATIC = 1;
  REASON_DEFAULT = 2;
  REASON_TARGETING_MATCH = 3;
  REASON_DISABLED = 4;
  REASON_ERROR = 5;
  REASON_FLAG_NOT_FOUND = 6;
  REASON_FALLBACK = 7;
}

// Error codes matching the flagd provider specification
enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_FLAG_NOT_FOUND = 1;
  ERROR_CODE_PARSE_ERROR = 2;
  ERROR_CODE_TYPE_MISMATCH = 3;
  ERROR_CODE_GENERAL = 4;
}

// The value can be one of several types (matches OpenFeature Value)
message Value {
  oneof kind {
    bool bool_value = 1;
    string string_value = 2;
    int64 int_value = 3;
    double double_value = 4;
    // For complex result values, we use JSON string (simpler than nested proto)
    string json_value = 5;
    // For context: list of values
    ListValue list_value = 6;
    // For context: nested structure (map of values)
    Struct struct_value = 7;
  }
}

// A list of values (for context arrays)
message ListValue {
  repeated Value values = 1;
}

// A structured value (for context objects)
message Struct {
  map<string, Value> fields = 1;
}

// Evaluation context passed to the evaluator
message EvaluationContext {
  // The targeting key (user identifier)
  string targeting_key = 1;

  // Context attributes (key-value pairs)
  map<string, Value> attributes = 2;
}

// The result of a feature flag evaluation
message EvaluationResult {
  // The resolved value of the flag
  Value value = 1;

  // The variant name that was selected (empty if not applicable)
  string variant = 2;

  // The reason for the resolution
  Reason reason = 3;

  // Error code if an error occurred (0 = no error)
  ErrorCode error_code = 4;

  // Error message if an error occurred
  string error_message = 5;

  // Metadata as JSON string (simpler than nested map of values)
  // Empty string means no metadata
  string metadata_json = 6;
}
